--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="jumbotron">
+    <div class="jumbotron">
+      <div class="container">
         <h1>Header</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
-      </div>  <!-- /JUMBOTRON -->
+        <p>Lorem ipsum dolor sit amet, consectetur Batman exercitation </p>
+      </div> <!-- /Container -->
+    </div>  <!-- /JUMBOTRON -->
 
+    <div class="container">
   <!-- Row: 1 -->
       <div class="row">
         <div class="col-sm-12">
 
-  <!-- Form -->        
+  <!-- Form -->
           <form class="">
             <div class="form-group">
               <label for="">Lorem Ipsum Baby!:</label>
