--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Header</h1>
         <p>Lorem ipsum dolor sit amet, consectetur Batman exercitation </p>
       </div> <!-- /Container -->
-    </div>  <!-- /JUMBOTRON -->
+    </div>  <!-- /Jumbotron -->
 
     <div class="container">
   <!-- Row: 1 -->
@@ -41,6 +41,12 @@
         </div>  <!-- /col-sm-12 -->
       </div>  <!-- /Row -->
 
+  <!-- Results ====== -->
+      <div class="row">
+        <div class="col-sm-12">
+
+        </div>
+      </div>
     </div>  <!-- /Container -->
 
   </body>
